# lol_team

./: README.md  pyproject.toml  test.txt
team/: _const.py  _dataclass.py  main.py
