[tool.poetry]
name = "lol-team"
version = "0.1.0"
description = ""
authors = ["matsuba93"]
readme = "README.md"
packages = [{include = "lol_team"}]

[tool.poetry.dependencies]
python = "^3.10"
riotwatcher = "^3.2.5"
fire = "^0.5.0"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
